@@ -25,7 +25,6 @@ import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -36,6 +35,7 @@ import java.util.function.Predicate;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Stream;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.ImmutableCapabilities;
 import org.openqa.selenium.MutableCapabilities;
@@ -325,6 +325,7 @@ public class DriverServiceSessionFactory implements SessionFactory {
     return new PersistentCapabilities(caps).setCapability(key, value);
   }
 
+  @Nullable
   private String getHost() {
     try {
       return new NetworkUtils().getNonLoopbackAddressOfThisMachine();
@@ -335,7 +336,7 @@ public class DriverServiceSessionFactory implements SessionFactory {
 
   private Capabilities setBrowserBinary(Capabilities options, String browserPath) {
     List<String> vendorOptionsCapabilities =
-        Arrays.asList("moz:firefoxOptions", "goog:chromeOptions", "ms:edgeOptions");
+        List.of("moz:firefoxOptions", "goog:chromeOptions", "ms:edgeOptions");
     for (String vendorOptionsCapability : vendorOptionsCapabilities) {
       if (options.asMap().containsKey(vendorOptionsCapability)) {
         try {
