@@ -20,9 +20,8 @@ package org.openqa.selenium.grid.web;
 import static java.net.HttpURLConnection.HTTP_INTERNAL_ERROR;
 import static org.openqa.selenium.json.Json.JSON_UTF_8;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.util.Collection;
+import java.util.Map;
 import java.util.Set;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.http.Contents;
@@ -37,9 +36,8 @@ public class CheckOriginHeader implements Filter {
 
   public CheckOriginHeader(Collection<String> allowedOriginHosts, Set<String> skipChecksOn) {
     Require.nonNull("Allowed origins list", allowedOriginHosts);
-    allowedHosts = ImmutableSet.copyOf(allowedOriginHosts);
-    this.skipChecksOn =
-        ImmutableSet.copyOf(Require.nonNull("URLs where checks are skipped", skipChecksOn));
+    allowedHosts = Set.copyOf(allowedOriginHosts);
+    this.skipChecksOn = Set.copyOf(Require.nonNull("URLs where checks are skipped", skipChecksOn));
   }
 
   @Override
@@ -58,9 +56,9 @@ public class CheckOriginHeader implements Filter {
             .addHeader("Content-Type", JSON_UTF_8)
             .setContent(
                 Contents.asJson(
-                    ImmutableMap.of(
+                    Map.of(
                         "value",
-                        ImmutableMap.of(
+                        Map.of(
                             "error", "unknown error",
                             "message", "Origin not allowed: " + origin,
                             "stacktrace", ""))));
