@@ -17,77 +17,54 @@
 
 package org.openqa.selenium.grid.distributor.selector;
 
-import static com.google.common.collect.ImmutableSet.toImmutableSet;
+import static java.util.Collections.unmodifiableSet;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openqa.selenium.grid.data.Availability.UP;
+import static org.openqa.selenium.internal.Sets.sequencedSetOf;
+import static org.openqa.selenium.internal.Sets.toSequencedSet;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Random;
 import java.util.Set;
 import java.util.UUID;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.ImmutableCapabilities;
-import org.openqa.selenium.events.EventBus;
-import org.openqa.selenium.events.local.GuavaEventBus;
 import org.openqa.selenium.grid.data.DefaultSlotMatcher;
 import org.openqa.selenium.grid.data.NodeId;
 import org.openqa.selenium.grid.data.NodeStatus;
 import org.openqa.selenium.grid.data.Session;
 import org.openqa.selenium.grid.data.Slot;
 import org.openqa.selenium.grid.data.SlotId;
-import org.openqa.selenium.grid.node.Node;
-import org.openqa.selenium.grid.node.local.LocalNode;
-import org.openqa.selenium.grid.security.Secret;
-import org.openqa.selenium.grid.testing.TestSessionFactory;
 import org.openqa.selenium.remote.SessionId;
-import org.openqa.selenium.remote.http.HttpHandler;
-import org.openqa.selenium.remote.http.HttpRequest;
-import org.openqa.selenium.remote.http.HttpResponse;
-import org.openqa.selenium.remote.tracing.DefaultTestTracer;
-import org.openqa.selenium.remote.tracing.Tracer;
 
 class GreedySlotSelectorTest {
 
   private final Random random = new Random();
   private final GreedySlotSelector selector = new GreedySlotSelector();
-  private Tracer tracer;
-  private EventBus bus;
-  private URI uri;
-
-  @BeforeEach
-  public void setUp() throws URISyntaxException {
-    tracer = DefaultTestTracer.createTracer();
-    bus = new GuavaEventBus();
-    uri = new URI("http://localhost:1234");
-  }
 
   @Test
   void nodesAreOrderedByUtilizationRatio() {
     Capabilities caps = new ImmutableCapabilities("browserName", "chrome");
 
-    NodeStatus highUtilization = createNode(ImmutableList.of(caps), 10, 8); // 80% utilized
-    NodeStatus mediumUtilization = createNode(ImmutableList.of(caps), 10, 5); // 50% utilized
-    NodeStatus lowUtilization = createNode(ImmutableList.of(caps), 10, 2); // 20% utilized
+    NodeStatus highUtilization = createNode(List.of(caps), 10, 8); // 80% utilized
+    NodeStatus mediumUtilization = createNode(List.of(caps), 10, 5); // 50% utilized
+    NodeStatus lowUtilization = createNode(List.of(caps), 10, 2); // 20% utilized
 
     Set<SlotId> slots =
         selector.selectSlot(
             caps,
-            ImmutableSet.of(lowUtilization, mediumUtilization, highUtilization),
+            sequencedSetOf(lowUtilization, mediumUtilization, highUtilization),
             new DefaultSlotMatcher());
 
-    ImmutableSet<NodeId> nodeIds =
-        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toImmutableSet());
+    Set<NodeId> nodeIds =
+        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toSequencedSet());
 
     assertThat(nodeIds)
         .containsSequence(
@@ -98,16 +75,16 @@ class GreedySlotSelectorTest {
   void nodesWithSameUtilizationAreOrderedByTotalSlots() {
     Capabilities caps = new ImmutableCapabilities("browserName", "chrome");
 
-    NodeStatus smallNode = createNode(ImmutableList.of(caps), 4, 2); // 50% utilized, 4 slots
-    NodeStatus mediumNode = createNode(ImmutableList.of(caps), 8, 4); // 50% utilized, 8 slots
-    NodeStatus largeNode = createNode(ImmutableList.of(caps), 12, 6); // 50% utilized, 12 slots
+    NodeStatus smallNode = createNode(List.of(caps), 4, 2); // 50% utilized, 4 slots
+    NodeStatus mediumNode = createNode(List.of(caps), 8, 4); // 50% utilized, 8 slots
+    NodeStatus largeNode = createNode(List.of(caps), 12, 6); // 50% utilized, 12 slots
 
     Set<SlotId> slots =
         selector.selectSlot(
-            caps, ImmutableSet.of(largeNode, mediumNode, smallNode), new DefaultSlotMatcher());
+            caps, sequencedSetOf(largeNode, mediumNode, smallNode), new DefaultSlotMatcher());
 
-    ImmutableSet<NodeId> nodeIds =
-        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toImmutableSet());
+    Set<NodeId> nodeIds =
+        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toSequencedSet());
 
     assertThat(nodeIds)
         .containsSequence(smallNode.getNodeId(), mediumNode.getNodeId(), largeNode.getNodeId());
@@ -117,16 +94,16 @@ class GreedySlotSelectorTest {
   void nodesWithSameUtilizationAndSlotsAreOrderedByLoad() {
     Capabilities caps = new ImmutableCapabilities("browserName", "chrome");
 
-    NodeStatus lowLoad = createNode(ImmutableList.of(caps), 10, 2); // 20% load
-    NodeStatus mediumLoad = createNode(ImmutableList.of(caps), 10, 5); // 50% load
-    NodeStatus highLoad = createNode(ImmutableList.of(caps), 10, 8); // 80% load
+    NodeStatus lowLoad = createNode(List.of(caps), 10, 2); // 20% load
+    NodeStatus mediumLoad = createNode(List.of(caps), 10, 5); // 50% load
+    NodeStatus highLoad = createNode(List.of(caps), 10, 8); // 80% load
 
     Set<SlotId> slots =
         selector.selectSlot(
-            caps, ImmutableSet.of(highLoad, mediumLoad, lowLoad), new DefaultSlotMatcher());
+            caps, sequencedSetOf(highLoad, mediumLoad, lowLoad), new DefaultSlotMatcher());
 
-    ImmutableSet<NodeId> nodeIds =
-        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toImmutableSet());
+    Set<NodeId> nodeIds =
+        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toSequencedSet());
 
     assertThat(nodeIds)
         .containsSequence(highLoad.getNodeId(), mediumLoad.getNodeId(), lowLoad.getNodeId());
@@ -136,15 +113,15 @@ class GreedySlotSelectorTest {
   void nodesThatHaveExceededMaxSessionsAreNotSelected() {
     Capabilities caps = new ImmutableCapabilities("browserName", "chrome");
 
-    NodeStatus availableNode = createNode(ImmutableList.of(caps), 10, 5); // 50% utilized
-    NodeStatus fullNode = createNode(ImmutableList.of(caps), 10, 10); // 100% utilized
+    NodeStatus availableNode = createNode(List.of(caps), 10, 5); // 50% utilized
+    NodeStatus fullNode = createNode(List.of(caps), 10, 10); // 100% utilized
 
     Set<SlotId> slots =
         selector.selectSlot(
-            caps, ImmutableSet.of(fullNode, availableNode), new DefaultSlotMatcher());
+            caps, sequencedSetOf(fullNode, availableNode), new DefaultSlotMatcher());
 
-    ImmutableSet<NodeId> nodeIds =
-        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toImmutableSet());
+    Set<NodeId> nodeIds =
+        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toSequencedSet());
 
     assertThat(nodeIds).doesNotContain(fullNode.getNodeId());
     assertThat(nodeIds).contains(availableNode.getNodeId());
@@ -156,21 +133,21 @@ class GreedySlotSelectorTest {
 
     NodeStatus oldVersionHighUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome", "browserVersion", "120.1")),
+            List.of(Map.of("browserName", "chrome", "browserVersion", "120.1")),
             10,
             8); // 80% utilized
     NodeStatus newVersionLowUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome", "browserVersion", "120.0")),
+            List.of(Map.of("browserName", "chrome", "browserVersion", "120.0")),
             10,
             2); // 20% utilized
 
     Set<SlotId> slots =
         selector.selectSlot(
-            caps, ImmutableSet.of(oldVersionHighUtil, newVersionLowUtil), new DefaultSlotMatcher());
+            caps, sequencedSetOf(oldVersionHighUtil, newVersionLowUtil), new DefaultSlotMatcher());
 
-    ImmutableSet<NodeId> nodeIds =
-        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toImmutableSet());
+    Set<NodeId> nodeIds =
+        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toSequencedSet());
 
     assertThat(nodeIds)
         .containsSequence(oldVersionHighUtil.getNodeId(), newVersionLowUtil.getNodeId());
@@ -182,21 +159,19 @@ class GreedySlotSelectorTest {
 
     NodeStatus windowsHighUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome", "platformName", "WINDOWS")),
+            List.of(Map.of("browserName", "chrome", "platformName", "WINDOWS")),
             10,
             8); // 80% utilized
     NodeStatus macLowUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome", "platformName", "MAC")),
-            10,
-            2); // 20% utilized
+            List.of(Map.of("browserName", "chrome", "platformName", "MAC")), 10, 2); // 20% utilized
 
     Set<SlotId> slots =
         selector.selectSlot(
-            caps, ImmutableSet.of(windowsHighUtil, macLowUtil), new DefaultSlotMatcher());
+            caps, sequencedSetOf(windowsHighUtil, macLowUtil), new DefaultSlotMatcher());
 
-    ImmutableSet<NodeId> nodeIds =
-        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toImmutableSet());
+    Set<NodeId> nodeIds =
+        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toSequencedSet());
 
     assertThat(nodeIds).containsSequence(windowsHighUtil.getNodeId(), macLowUtil.getNodeId());
   }
@@ -206,12 +181,11 @@ class GreedySlotSelectorTest {
     Capabilities caps = new ImmutableCapabilities("browserName", "chrome");
 
     NodeStatus basicHighUtil =
-        createNodeWithStereotypes(
-            ImmutableList.of(ImmutableMap.of("browserName", "chrome")), 10, 8); // 80% utilized
+        createNodeWithStereotypes(List.of(Map.of("browserName", "chrome")), 10, 8); // 80% utilized
     NodeStatus advancedLowUtil =
         createNodeWithStereotypes(
-            ImmutableList.of(
-                ImmutableMap.of(
+            List.of(
+                Map.of(
                     "browserName", "chrome",
                     "platformName", "MAC",
                     "se:recordVideo", true)),
@@ -220,20 +194,15 @@ class GreedySlotSelectorTest {
 
     Set<SlotId> slots =
         selector.selectSlot(
-            caps, ImmutableSet.of(basicHighUtil, advancedLowUtil), new DefaultSlotMatcher());
+            caps, sequencedSetOf(basicHighUtil, advancedLowUtil), new DefaultSlotMatcher());
 
-    ImmutableSet<NodeId> nodeIds =
-        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toImmutableSet());
+    Set<NodeId> nodeIds =
+        slots.stream().map(SlotId::getOwningNodeId).distinct().collect(toSequencedSet());
 
     assertThat(nodeIds).containsSequence(basicHighUtil.getNodeId(), advancedLowUtil.getNodeId());
   }
 
   private NodeStatus createNode(List<Capabilities> stereotypes, int count, int currentLoad) {
-    return createNode(stereotypes, count, currentLoad, 0.0);
-  }
-
-  private NodeStatus createNode(
-      List<Capabilities> stereotypes, int count, int currentLoad, double load) {
     NodeId nodeId = new NodeId(UUID.randomUUID());
     URI uri = createUri();
 
@@ -261,33 +230,19 @@ class GreedySlotSelectorTest {
         nodeId,
         uri,
         count,
-        ImmutableSet.copyOf(slots),
+        unmodifiableSet(slots),
         UP,
         Duration.ofSeconds(10),
         Duration.ofSeconds(300),
         "4.0.0",
-        ImmutableMap.of(
+        Map.of(
             "name", "Max OS X",
             "arch", "x86_64",
             "version", "10.15.7"));
   }
 
-  private NodeStatus createNodeWithStereotypes(List<ImmutableMap> stereotypes) {
-    URI uri = createUri();
-    LocalNode.Builder nodeBuilder =
-        LocalNode.builder(tracer, bus, uri, uri, new Secret("cornish yarg"));
-    nodeBuilder.maximumConcurrentSessions(stereotypes.size());
-    stereotypes.forEach(
-        stereotype -> {
-          Capabilities caps = new ImmutableCapabilities(stereotype);
-          nodeBuilder.add(caps, new TestSessionFactory((id, c) -> new Handler(c)));
-        });
-    Node myNode = nodeBuilder.build();
-    return myNode.getStatus();
-  }
-
   private NodeStatus createNodeWithStereotypes(
-      List<ImmutableMap> stereotypes, int count, int currentLoad) {
+      List<Map<?, ?>> stereotypes, int count, int currentLoad) {
     NodeId nodeId = new NodeId(UUID.randomUUID());
     URI uri = createUri();
 
@@ -314,12 +269,12 @@ class GreedySlotSelectorTest {
         nodeId,
         uri,
         count,
-        ImmutableSet.copyOf(slots),
+        unmodifiableSet(slots),
         UP,
         Duration.ofSeconds(10),
         Duration.ofSeconds(300),
         "4.0.0",
-        ImmutableMap.of(
+        Map.of(
             "name", "Max OS X",
             "arch", "x86_64",
             "version", "10.15.7"));
@@ -330,22 +285,6 @@ class GreedySlotSelectorTest {
       return new URI("http://localhost:" + random.nextInt());
     } catch (URISyntaxException e) {
       throw new RuntimeException(e);
-    }
-  }
-
-  private class Handler extends Session implements HttpHandler {
-    private Handler(Capabilities capabilities) {
-      super(
-          new SessionId(UUID.randomUUID()),
-          uri,
-          new ImmutableCapabilities(),
-          capabilities,
-          Instant.now());
-    }
-
-    @Override
-    public HttpResponse execute(HttpRequest req) throws UncheckedIOException {
-      return new HttpResponse();
     }
   }
 }
