@@ -17,23 +17,21 @@
 
 package org.openqa.selenium.netty.server;
 
-import static java.util.concurrent.TimeUnit.MILLISECONDS;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.openqa.selenium.remote.http.Contents.utf8String;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
+import org.jspecify.annotations.NullMarked;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.grid.config.MapConfig;
@@ -62,18 +60,21 @@ class WebSocketServingTest {
 
   @Test
   void clientShouldThrowAnExceptionIfUnableToConnectToAWebSocketEndPoint() {
-    assertThrows(
-        ConnectionFailedException.class,
-        () -> {
-          server = new NettyServer(defaultOptions(), req -> new HttpResponse()).start();
+    assertThatThrownBy(
+            () -> {
+              server = new NettyServer(defaultOptions(), req -> new HttpResponse()).start();
 
-          HttpClient client = HttpClient.Factory.createDefault().createClient(server.getUrl());
+              HttpClient client = HttpClient.Factory.createDefault().createClient(server.getUrl());
 
-          client.openSocket(new HttpRequest(GET, "/does-not-exist"), new WebSocket.Listener() {});
-        });
+              client.openSocket(
+                  new HttpRequest(GET, "/does-not-exist"), new WebSocket.Listener() {});
+            })
+        .isInstanceOf(ConnectionFailedException.class)
+        .hasMessageStartingWith("JdkWebSocket initial request execution error");
   }
 
   @Test
+  @NullMarked
   void shouldUseUriToChooseWhichWebSocketHandlerToUse() throws InterruptedException {
     AtomicBoolean foo = new AtomicBoolean(false);
     AtomicBoolean bar = new AtomicBoolean(false);
@@ -157,6 +158,7 @@ class WebSocketServingTest {
   }
 
   @Test
+  @NullMarked
   void webSocketHandlersShouldBeAbleToFireMoreThanOneMessage() {
     server =
         new NettyServer(
@@ -187,52 +189,8 @@ class WebSocketServingTest {
     new FluentWait<>(messages).until(msgs -> msgs.size() == 2);
   }
 
-  public void serverShouldBeAbleToPushAMessageWithoutNeedingTheClientToSendAMessage()
-      throws InterruptedException {
-    class MyHandler implements Consumer<Message> {
-
-      private final Consumer<Message> sink;
-      private final ScheduledExecutorService executor =
-          Executors.newSingleThreadScheduledExecutor();
-
-      public MyHandler(Consumer<Message> sink) {
-        this.sink = sink;
-
-        // Send a message every 250ms
-        executor.scheduleAtFixedRate(
-            () -> sink.accept(new TextMessage("Calling home.")), 100, 250, MILLISECONDS);
-      }
-
-      @Override
-      public void accept(Message message) {
-        // Do nothing
-      }
-    }
-
-    server =
-        new NettyServer(
-                defaultOptions(),
-                req -> new HttpResponse(),
-                (uri, sink) -> Optional.of(new MyHandler(sink)))
-            .start();
-
-    CountDownLatch latch = new CountDownLatch(2);
-    HttpClient client = HttpClient.Factory.createDefault().createClient(server.getUrl());
-    client.openSocket(
-        new HttpRequest(GET, "/pushit"),
-        new WebSocket.Listener() {
-          @Override
-          public void onText(CharSequence data) {
-            latch.countDown();
-          }
-        });
-
-    latch.await(2, SECONDS);
-  }
-
   private BaseServerOptions defaultOptions() {
     return new BaseServerOptions(
-        new MapConfig(
-            ImmutableMap.of("server", ImmutableMap.of("port", PortProber.findFreePort()))));
+        new MapConfig(Map.of("server", Map.of("port", PortProber.findFreePort()))));
   }
 }
