@@ -20,11 +20,9 @@ package org.openqa.selenium.remote;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.InvalidCookieDomainException;
@@ -50,7 +48,7 @@ import org.openqa.selenium.json.Json;
 @Tag("UnitTests")
 @SuppressWarnings("removal")
 class ErrorHandlerTest {
-  private ErrorHandler handler;
+  private final ErrorHandler handler = new ErrorHandler().setIncludeServerErrors(true);
 
   private static void assertStackTracesEqual(
       StackTraceElement[] expected, StackTraceElement[] actual) {
@@ -67,12 +65,6 @@ class ErrorHandlerTest {
   private static Map<String, Object> toMap(Object o) {
     String rawJson = new Json().toJson(o);
     return new Json().toType(rawJson, Map.class);
-  }
-
-  @BeforeEach
-  public void setUp() {
-    handler = new ErrorHandler();
-    handler.setIncludeServerErrors(true);
   }
 
   @Test
@@ -113,6 +105,15 @@ class ErrorHandlerTest {
   }
 
   @Test
+  void testShouldThrowAVanillaWebDriverExceptionIfResponseStatusIsNull() {
+    Response response = new Response();
+    assertThatExceptionOfType(WebDriverException.class)
+        .isThrownBy(() -> handler.throwIfResponseFailed(response, 123))
+        .withNoCause()
+        .withMessageContaining(new WebDriverException().getMessage());
+  }
+
+  @Test
   void testShouldNotSetCauseIfResponseValueIsJustAString() {
     assertThatExceptionOfType(WebDriverException.class)
         .isThrownBy(
@@ -131,8 +132,7 @@ class ErrorHandlerTest {
         .isThrownBy(
             () ->
                 handler.throwIfResponseFailed(
-                    createResponse(ErrorCodes.UNHANDLED_ERROR, ImmutableMap.of("message", "boom")),
-                    123))
+                    createResponse(ErrorCodes.UNHANDLED_ERROR, Map.of("message", "boom")), 123))
         .withNoCause()
         .withMessageContaining("boom")
         .withMessageContaining(new WebDriverException().getMessage());
@@ -146,8 +146,7 @@ class ErrorHandlerTest {
                 handler.throwIfResponseFailed(
                     createResponse(
                         ErrorCodes.UNHANDLED_ERROR,
-                        ImmutableMap.of(
-                            "message", "boom", "class", NullPointerException.class.getName())),
+                        Map.of("message", "boom", "class", NullPointerException.class.getName())),
                     123))
         .withMessage(
             new WebDriverException(
@@ -166,8 +165,7 @@ class ErrorHandlerTest {
                 handler.throwIfResponseFailed(
                     createResponse(
                         ErrorCodes.UNHANDLED_ERROR,
-                        ImmutableMap.of(
-                            "message", "boom", "class", NullPointerException.class.getName())),
+                        Map.of("message", "boom", "class", NullPointerException.class.getName())),
                     1234))
         .withMessage(
             new WebDriverException(
@@ -231,12 +229,12 @@ class ErrorHandlerTest {
   @Test
   void testShouldStillTryToBuildWebDriverExceptionIfClassIsNotProvidedAndStackTraceIsNotForJava() {
     Map<String, ?> data =
-        ImmutableMap.of(
+        Map.of(
             "message",
             "some error message",
             "stackTrace",
             Collections.singletonList(
-                ImmutableMap.of(
+                Map.of(
                     "lineNumber", 1224,
                     "methodName", "someMethod",
                     "className", "MyClass",
@@ -296,7 +294,7 @@ class ErrorHandlerTest {
     data.put(
         "stackTrace",
         Collections.singletonList(
-            ImmutableMap.of(
+            Map.of(
                 "lineNumber", 1224,
                 "methodName", "someMethod",
                 "className", "MyClass",
@@ -338,12 +336,12 @@ class ErrorHandlerTest {
   @Test
   void testToleratesNonNumericLineNumber() {
     Map<String, ?> data =
-        ImmutableMap.of(
+        Map.of(
             "message",
             "some error message",
             "stackTrace",
             Collections.singletonList(
-                ImmutableMap.of(
+                Map.of(
                     "lineNumber", "some string, might be empty or 'Not available'",
                     "methodName", "someMethod",
                     "className", "MyClass",
@@ -377,12 +375,12 @@ class ErrorHandlerTest {
   @Test
   void testToleratesNumericLineNumberAsString() {
     Map<String, ?> data =
-        ImmutableMap.of(
+        Map.of(
             "message",
             "some error message",
             "stackTrace",
             Collections.singletonList(
-                ImmutableMap.of(
+                Map.of(
                     "lineNumber", "1224", // number as a string
                     "methodName", "someMethod",
                     "className", "MyClass",
