@@ -22,10 +22,11 @@ import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openqa.selenium.testing.Safely.safelyCall;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicReference;
+import org.jspecify.annotations.NullMarked;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
@@ -100,6 +101,7 @@ public abstract class WebSocketTestBase {
     WebSocket.Listener listener =
         new WebSocket.Listener() {
           @Override
+          @NullMarked
           public void onText(CharSequence data) {
             message.set(data.toString());
             latch.countDown();
@@ -122,6 +124,7 @@ public abstract class WebSocketTestBase {
     WebSocket.Listener listener =
         new WebSocket.Listener() {
           @Override
+          @NullMarked
           public void onBinary(byte[] data) {
             message.set(data);
             latch.countDown();
@@ -139,7 +142,6 @@ public abstract class WebSocketTestBase {
 
   private static BaseServerOptions defaultOptions() {
     return new BaseServerOptions(
-        new MapConfig(
-            ImmutableMap.of("server", ImmutableMap.of("port", PortProber.findFreePort()))));
+        new MapConfig(Map.of("server", Map.of("port", PortProber.findFreePort()))));
   }
 }
